--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,14 @@
-MONGODB_URI=mongodb://localhost:27017/kitchen-system
-JWT_SECRET=your_secure_secret_key_here
+#MONGODB_URI=mongodb://localhost:27017/kitchen-system
+#JWT_SECRET=your_secure_secret_key_here
+#PORT=3000
+
+# Backend Environment Variables
 PORT=3000
+MONGODB_URI=mongodb://localhost:27017/homefood
+JWT_SECRET=your-super-secure-jwt-secret-key-here-make-it-long-and-random
+
+# WebSocket Port (for real-time updates)
+WS_PORT=8080
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3001
