--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "backend",
+  "name": "homefood-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["homefood", "api", "food-delivery", "home-cooking"],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend API for HomeFood app - connecting home cooks with customers",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "ws": "^8.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
